I give up. there isn't a way to do this with java 1.6 only. insert explicatives here.